--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2>000 - General Knowldge</h2>
         <img src="images/001-4.png" alt="Badge Image" />
         <img src="images/005-276.png" alt="Badge Image" />
+        <img src="images/006-6869.png" alt="Badge Image" />
       </div>
       <div class="image">
         <h2>100 - _____</h2>
