--- a/index.html
+++ b/index.html
@@ -8,41 +8,6 @@
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <!-- NAVBAR -->
-    <!-- <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-
-         <a class="navbar-brand text-muted" href="darenschaad.github.io/me">Home</a>
-         <div class="collapse navbar-collapse">
-
-           <ul class="nav navbar-nav navbar-right">
-             <li class="active"><a href="#">Home</a></li>
-             <li class="active"><a href="#">My Background</a></li>
-             <li class="dropdown active">
-                  <a data-toggle="dropdown" data-target="#">My Projects<b class="caret">
-                  </b></a>
-                  <ul class = "dropdown-menu">
-                    <li><a href="#">Dream Vacation</a></li>
-                    <li><a href="#">Animal Shelter</a></li>
-                    <li><a href="#">Cupcake Shop</a></li>
-                    <li class="divider"></li>
-                    <li><a href="https://www.amazon.com/">Links to all projects</a></li>
-                  </ul>
-                </li>
-            </ul>
-
-          </div>
-        </div>
-      </div> -->
-      <!-- NAVBAR -->
-
-
 <!--MAIN CONTENT -->
     <div class="container">
       <div class="image">
@@ -50,6 +15,7 @@
         <img src="images/001-4.png" alt="Badge Image" />
         <img src="images/005-276.png" alt="Badge Image" />
         <img src="images/006-6869.png" alt="Badge Image" />
+        <img src="images/028-1.png" alt="Badge Image" />
       </div>
       <div class="image">
         <h2>100 - _____</h2>
@@ -96,57 +62,8 @@
         <img src="images/108-2.png" alt="Badge Image" />
         <img src="images/132-2.png" alt="Badge Image" />
       </div>
-      <!-- <div class="row">
-        <div class="col-sm-4">
-          <div class="image">
-            <h2>000 - General Knowldge</h2>
-            <img src="images/001-4.png" alt="" />
-            <img src="images/005-276.png" alt="" />
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-
-
-        </div>
-
-        <div class="col-sm-4">
-
-
-
-        </div>
-      </div> -->
-      <!-- <hr>
-
-        <div class="row">
-          <div class="col-sm-6 hidden-xs">
-            <h3>Learn more about me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-
-          <div class="row">
-            <div class="col-sm-6 col-md-push-6">
-
-            </div>
-            <div class="col-sm-6 col-md-pull-6">
-              <p>Fill in Later!</p>
-              <a href="#">Visit my FaceBook page!</a>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-sm-6">
-            <h3>My imediate family</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-          </div>
-        </div>
-
-        <hr>
-        <div class="">
-          <p>&copy; 2016 Daren Schaad Inc.</p>
-        </div> -->
-      </div>
-      <script src="http://code.jquery.com/jquery.js"></script>
-      <script src="js/bootstrap.min.js"></script>
+    </div>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
