--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="images/005-276.png" alt="Badge Image" />
         <img src="images/006-6869.png" alt="Badge Image" />
         <img src="images/028-1.png" alt="Badge Image" />
+        <img src="images/032-02.png" alt="Badge Image" />
       </div>
       <div class="image">
         <h2>100 - _____</h2>
