--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--MAIN CONTENT -->
     <div class="container">
       <div class="image">
-        <h2>000 - General Knowldge</h2>
+        <h2>000 - General Knowledge</h2>
         <img src="images/001-4.png" alt="Badge Image" />
         <img src="images/005-276.png" alt="Badge Image" />
         <img src="images/006-6869.png" alt="Badge Image" />
