--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
 <!--MAIN CONTENT -->
     <div class="container">
+      <div class="center">
+        <h1 id="headline">Badger Badges</h1>
+      </div>
       <div class="image">
         <h2>000 - General Knowledge</h2>
         <img src="images/001-4.png" alt="Badge Image" />
