updated index to add challenge sets

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -53,6 +54,14 @@
       <div class="image">
         <h2>900 - History &amp; Geography</h2>
         <p><img src="images/900.png" alt="900" width="1125" height="1125"><img src="images/910-7.png" alt="910.7" width="1125" height="1125"><img src="images/910-8.png" alt="910.8" width="1125" height="1125"><img src="images/915-04.png" alt="915.04" width="1125" height="1128"><img src="images/917-30000.png" alt="917.3" width="1125" height="1125"><img src="images/917-30492.png" alt="917.30492" width="1125" height="1125"><img src="images/917-80400.png" alt="917.804" width="1125" height="1125"><img src="images/917-94800.png" alt="917.948" width="1125" height="1125"><img src="images/917-95000.png" alt="917.95" width="1125" height="1125"><img src="images/917-95400.png" alt="917.954" width="1125" height="1125"><img src="images/917-95490.png" alt="917.9549" width="1125" height="1125"><img src="images/920-02.png" alt="920.02" width="1125" height="1125"><img src="images/973-03.png" alt="973.03" width="1126" height="1126"><img src="images/973-075.png" alt="973.075" width="1125" height="1125"><img src="images/973-099.png" alt="973.099" width="1125" height="1125"><img src="images/979-5.png" alt="979.5" width="1125" height="1125"><img src="images/979-549.png" alt="979.549" width="1125" height="1125"></p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+      </div>
+       <div class="image">
+        <h2>Challenge Sets</h2>
+        <p>HELLO</p><IMG SRC="images/goodsport.png" alt="Good Sport" width="1125" height="1125"><IMG SRC="images/kitchensciences.png" alt="Kitchen Sciences" width="1125" height="1125"><IMG SRC="images/knowitall.png" alt="Know It All" width="1125" height="1125"><IMG SRC="images/mastergardener.png" alt="Master Gardener" width="1125" height="1125"><IMG SRC="images/media-consumption.png" alt="Media Consumption" width="1125" height="1125"><IMG SRC="images/media-production.png" alt="Media Production" width="1125" height="1125"><IMG SRC="images/model-citizen.png" alt="Model Citizen" width="1125" height="1125"><IMG SRC="images/partyanimal.png" alt="Party Animal" width="1125" height="1125"><IMG SRC="images/professional-development.png" alt="Professional Development" width="1125" height="1125"><IMG SRC="images/survivalskills.png" alt="Survival Skills" width="1125" height="1125"><IMG SRC="images/textiles.png" alt="Textiles" width="1125" height="1125">
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
       </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
